# fastcomments-docs

./: .gitignore  .jscpd.json  CLAUDE.md  LICENSE  README.md  build-static.sh  build.bat  build.sh  fastcomments-docs.service  package-lock.json  package.json  run.sh  start.sh  stop.sh  validate-github-links.js
fastcomments/: SKILL.md
rust/: Cargo.toml
rust/browser/: Cargo.toml
rust/browser/src/: cache.rs  lib.rs  pool.rs  screenshot.rs
rust/indexer/: Cargo.toml
rust/indexer/examples/: dump_docs.rs  dump_ids.rs
rust/indexer/src/: main.rs
rust/indexschema/: Cargo.toml
rust/indexschema/src/: lib.rs
rust/llm/: Cargo.toml
rust/llm/src/: cache_key.rs  client.rs  lib.rs
rust/llm/tests/: cache_parity.rs  cache_parity_fixtures.json
rust/sdkgen/: Cargo.toml
rust/sdkgen/src/: checkout.rs  config.rs  guide.rs  main.rs
rust/sdkgen/src/generators/: ai.rs  base.rs  mod.rs  openapi.rs  readme.rs
rust/sdkgen/src/generators/ai/: common.rs  cpp.rs  cpp_parser.rs  mod.rs  nim.rs  nim_parser.rs  prompts.rs  rust.rs  rust_parser.rs  typescript.rs  typescript_parser.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs  ratelimit.rs  telemetry.rs
rust/shared/: Cargo.toml
rust/shared/src/: guides.rs  lib.rs  link_validator.rs  locales.rs  pipeline.rs  repo.rs  sidecar.rs  sidecar_supervisor.rs  templates.rs  translations.rs
rust/shared/src/markers/: mod.rs  qjs.rs
rust/shared/src/pipeline/: full.rs  indexer.rs  marker_names.rs  mod.rs
rust/shared/tests/: marker_corpus.rs  templates.rs  translations.rs  walker.rs
rust/sitegen/: Cargo.toml
rust/sitegen/src/: build.rs  custom_styling.rs  main.rs  sidecar_supervisor.rs  static_build.rs
rust/trans/: Cargo.toml
rust/trans/src/: check.rs  cleanup.rs  discover.rs  json_translator.rs  llm_client.rs  main.rs  meta_json.rs  node_prompts_fixture.json  openai.rs  openai_client.rs  run.rs  snapshot.rs  ui.rs
rust/trans/tests/: prompt_parity.rs
rust/trans/tests/fixtures/: api_resource_header.md  apostrophe_in_attrs.md  fenced_code.md  markdown_with_inline_code.md  regenerate-node-prompts.js
rust/watcher/: Cargo.toml
rust/watcher/src/: main.rs  plan.rs
scripts/: check-cache-parity.py  check-dup-rust.js  compare-html.py  compare-indexes.py  dump-locales.js  search-regression-queries.json  search-regression.js
src/: api-resource-header-generator.js  app-screenshot-generator.js  app.js  build-search-index-parallel.js  build-search-index-worker.js  check-translations.js  claude-translate.js  cleanup-empty-generated.js  cleanup-empty-translations.js  code-example-generator.js  code-page-generator.js  code-snippet-storage.js  content-sidecar.js  custom-styling-guide-generator.js  flow-diagram-generator.js  guide-dynamic-content-transformer.js  guides.js  index.js  inline-code-generator.js  link-validator.js  locales.js  locales.json  migrate-to-locale-structure.js  populate-snapshot.js  related-parameter-generator.js  sdk-checkout-manager.js  sdk-guide-generator.js  server-search-engine.js  snippet-processor.js  translate-with-gpt.js  translation-cache.json  translation-snapshot.js  translation-snapshot.json  translations.json  ui-translation-cache.json  utils.js  watch.js
src/content/: sdk-repos.json
src/content/categories/custom-styles/: meta.json
src/content/guides/: guide-order.json
src/content/guides/affiliates/: conclusion.md  intro.md  meta.json
src/content/guides/ai-agents/: conclusion.md  intro.md  meta.json
src/content/guides/analytics/: conclusion.md  meta.json
src/content/guides/api/: conclusion.md  intro.md  meta.json
src/content/guides/authentication/: meta.json
src/content/guides/badges/: conclusion.md  intro.md  meta.json
src/content/guides/collab-chat/: conclusion.md  intro.md  meta.json
src/content/guides/comment-count-widgets/: conclusion.md  intro.md  meta.json
src/content/guides/comment-syntax/: intro.md  meta.json
src/content/guides/comment-vote-verification/: intro.md  meta.json
src/content/guides/custom-styling/: intro.md  meta.json
src/content/guides/customizations-and-configuration/: index.md.html  intro.md  meta.json
src/content/guides/dark-mode/: meta.json
src/content/guides/deleting-account/: meta.json
src/content/guides/dynamic-comment-widget/: intro.md  meta.json
src/content/guides/email-templates/: intro.md  meta.json
src/content/guides/extensions/: intro.md  meta.json
src/content/guides/feeds/: intro.md
src/content/guides/gdpr/: intro.md  meta.json
src/content/guides/getting-started/: meta.json
src/content/guides/gifs/: meta.json
src/content/guides/hashtags/: meta.json
src/content/guides/image-chat/: conclusion.md  intro.md  meta.json
src/content/guides/installation-bigcommerce/: intro.md  meta.json
src/content/guides/installation-bubble-io/: intro.md  meta.json
src/content/guides/installation-canvas-lms/: intro.md  meta.json
src/content/guides/installation-clickfunnels/: intro.md  meta.json
src/content/guides/installation-drupal/: meta.json
src/content/guides/installation-framer/: intro.md  meta.json
src/content/guides/rss/: intro.md  (+2 more)
src/sdk-doc-generators/: base-generator.js  cpp-ai-generator.js  cpp-parser.js  naming-utils.js  nim-ai-generator.js  nim-parser.js  openai-client.js  openapi-generator.js  readme-generator.js  rust-ai-generator.js  rust-parser.js  typescript-ai-generator.js  typescript-parser.js
src/snippets/: gohighlevel-wizard.html
src/static/css/: layout-installation-overview.css  layout-installation-pick-integration.css  layout-installation-pick-product.css  proxy-select.css  styles.css
src/static/csv/: fastcomments-scheduled-comments-example.csv
src/static/js/: code-copy.js  codemirror-javascript.js  codemirror-xml.js  codemirror.js  get-session-info.js  proxy-select.js  search.js  sidebar.js  version-check.js  widget-type.js
src/templates/: code.html  guide-layout.html  index.html  layout-installation-overview.html  layout-installation-pick-integration.html  layout-installation-pick-product.html  layout-installation-via-code.html  layout-installation-via-ui.html  page.html  post.html
(+100929 files in other folders)
