[workspace]
resolver = "2"
members = ["shared", "indexer", "server"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tantivy = "0.22"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
handlebars = "6"
scraper = "0.20"
ego-tree = "0.6"
html-escape = "0.2"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
once_cell = "1"
dashmap = "6"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
