[package]
name = "fcdocs-browser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chromiumoxide = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
md-5 = { workspace = true }
once_cell = { workspace = true }
