[package]
name = "fcdocs-llm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
