[package]
name = "fcdocs-sdkgen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkgen"
path = "src/main.rs"

[dependencies]
fcdocs-shared = { path = "../shared" }
fcdocs-llm = { path = "../llm" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
git2 = { workspace = true }
openapiv3 = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
