[package]
name = "fcdocs-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
fcdocs-shared = { path = "../shared" }
fcdocs-indexschema = { path = "../indexschema" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tempfile = { workspace = true }
indexmap = { workspace = true }
