[package]
name = "fcdocs-shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
pulldown-cmark = { workspace = true }
handlebars = { workspace = true }
scraper = { workspace = true }
ego-tree = { workspace = true }
html-escape = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
rquickjs = { workspace = true }
indexmap = { workspace = true }
dashmap = { workspace = true }
fcdocs-browser = { path = "../browser" }

[dev-dependencies]
tempfile = { workspace = true }
walkdir = { workspace = true }
