[package]
name = "fcdocs-sitegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sitegen"
path = "src/main.rs"

[dependencies]
fcdocs-shared = { path = "../shared" }
fcdocs-browser = { path = "../browser" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
nanoid = { workspace = true }
quick-xml = { workspace = true }
handlebars = { workspace = true }
pulldown-cmark = { workspace = true }
once_cell = { workspace = true }
md-5 = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
urlencoding = { workspace = true }
num_cpus = "1"

[dev-dependencies]
indexmap = { workspace = true }
