[package]
name = "fcdocs-trans"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "trans"
path = "src/main.rs"

[dependencies]
fcdocs-shared = { path = "../shared" }
fcdocs-llm = { path = "../llm" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
md-5 = { workspace = true }
git2 = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
